--- a/pagereplacementAlgo/PRA_HOMEPAGE.html
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.html
@@ -46,7 +46,7 @@
                       <div class="menu-heading">ALGORITHM</div>
                       <div class="menu-item">
                            <div>
-              <a href="FCFS/fcfs.html">
+              <a href=" FIFO/FIFO.html">
                 <div class="fifo">
                   <div class="short-title">FIFO</div>
                   <div class="long-title">
@@ -55,7 +55,7 @@
                   </div>
                 </div>
               </a>
-              <a href="SJF/sjf.html">
+              <a href="BELADY/BELADY.html">
                 <div class="belady">
                   <div class="short-title">BELADY</div>
                   <div class="long-title">
@@ -63,7 +63,7 @@
                   </div>
                 </div>
               </a>
-              <a href="LJF/ljf.html">
+              <a href="LIFO/LIFO.html">
                 <div class="lifo">
                   <div class="short-title">LIFO</div>
                   <div class="long-title">
@@ -74,13 +74,13 @@
               </a>
             </div>
             <div>
-              <a href="./RR/rr.html">
+              <a href="LRU/LRU.html">
                 <div class="lru">
                   <div class="short-title">LRU</div>
                   <div class="long-title">Least<br/> Recently <br/>Used</div>
                 </div>
               </a>
-              <a href="./SRJF/srjf.html">
+              <a href="OPTIMAL/OPTIMAL.html">
                 <div class="optimal">
                   <div class="short-title">OPTIMAL</div>
                   <div class="long-title">
@@ -89,7 +89,7 @@
                   </div>
                 </div>
               </a>
-              <a href="./PP/pp.html">
+              <a href="MRU/MRU.html">
                 <div class="mru">
                   <div class="short-title">MRU</div>
                   <div class="long-title">
