--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div>
               <div class="page">
-                <a href="PRA_HOMEPAGE.html">
+                <a href="pagereplacementAlgo/PRA_HOMEPAGE.html">
                   <div class="image">
                     <div class="link">LEARN MORE -</div>
                     <div class="title">PAGE REPLACEMENT ALGORITHM</div>
