--- a/pagereplacementAlgo/PRA_HOMEPAGE.html
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="deadlock.css" />
+    <link rel="stylesheet" href="PRA_HOMEPAGE.css" />
   </head>
 
   <body>
