--- a/pagereplacementAlgo/PRA_HOMEPAGE.html
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.html
@@ -55,49 +55,25 @@
                   </div>
                 </div>
               </a>
-              <a href="BELADY/BELADY.html">
+              <a href="LRU/LRU.html">
                 <div class="belady">
-                  <div class="short-title">BELADY</div>
+                  <div class="short-title">LRU</div>
                   <div class="long-title">
-                    Belady's <br/> Anomaly
+                    Least recent <br/> used
                   </div>
                 </div>
               </a>
-              <a href="LIFO/LIFO.html">
+              <a href="OPTIMAL/OPTIMAL.html">
                 <div class="lifo">
-                  <div class="short-title">LIFO</div>
+                  <div class="short-title">OPTIMAL</div>
                   <div class="long-title">
-                    Last In<br />
-                    First Out
+                    Optimal<br />
+                    Algorithm
                   </div>
                 </div>
               </a>
             </div>
             <div>
-              <a href="LRU/LRU.html">
-                <div class="lru">
-                  <div class="short-title">LRU</div>
-                  <div class="long-title">Least<br/> Recently <br/>Used</div>
-                </div>
-              </a>
-              <a href="OPTIMAL/OPTIMAL.html">
-                <div class="optimal">
-                  <div class="short-title">OPTIMAL</div>
-                  <div class="long-title">
-                    Optimal<br/>
-                    Algorithm
-                  </div>
-                </div>
-              </a>
-              <a href="MRU/MRU.html">
-                <div class="mru">
-                  <div class="short-title">MRU</div>
-                  <div class="long-title">
-                    Most <br/>
-                    Recently <br/> Used<br/>
-                  </div>
-                </div>
-              </a>
             </div>
             <div>
                           
