--- a/pagereplacementAlgo/FIFO/FIFO.html
+++ b/pagereplacementAlgo/FIFO/FIFO.html
@@ -12,7 +12,7 @@ href="https://fonts.googleapis.com/css2?family=Chonburi&family=Crimson+Pro:ital,
 rel="stylesheet"
 />
 
-<link rel="stylesheet" href="fcfs.css" />
+<link rel="stylesheet" href="FIFO.css" />
 </head>
 <body>
 <div class="header">
@@ -31,7 +31,7 @@ MENU
 <div class="menu">
 <div class="menu-item">
 <div>
-<a href="#">
+<a href="../FIFO/FIFO.html">
 <div class="fifo">
 <div class="short-title">FIFO</div>
 <div class="long-title">
@@ -40,47 +40,21 @@ first out
 </div>
 </div>
 </a>
-<a href="../LJF/ljf.html">
-<div class="belady">
-<div class="short-title">BELADY</div>
-<div class="long-title">
-Belady
-</div>
-</div>
-</a>
-<a href="../SJF/sjf.html">
-<div class="lifo">
-<div class="short-title">LIFO</div>
-<div class="long-title">
-Last in<br />
-Last out
-</div>
-</div>
-</a>
-
-</div>
-<div>
-<a href="../RR/rr.html">
-<div class="lru">
-<div class="short-title">LRU</div>
-<div class="long-title">Least<br/>Recently<br/>Used</div>
-</div>
-</a>
-<a href="../SRJF/srjf.html">
+<a href="../OPTIMAL/OPTIMAL.html">
 <div class="optimal">
 <div class="short-title">OPTIMAL</div>
 <div class="long-title">
-Optimal<br/>Algorithm
+Optimal<br />
+Algorithm
 </div>
 </div>
 </a>
-</div>
-<div>
-<a href="../HRRN/hrrn.html">
-<div class="mru">
-<div class="short-title">MRU</div>
+<a href="../LRU/LRU.html">
+<div class="lru">
+<div class="short-title">LRU</div>
 <div class="long-title">
-Most<br/>Recently<br/>Used
+Least<br />
+Recent Used
 </div>
 </div>
 </a>
