--- a/pagereplacementAlgo/LRU/LRU.html
+++ b/pagereplacementAlgo/LRU/LRU.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>FCFS</title>
+<title>LRU</title>
 
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link
@@ -12,7 +12,7 @@ href="https://fonts.googleapis.com/css2?family=Chonburi&family=Crimson+Pro:ital,
 rel="stylesheet"
 />
 
-<link rel="stylesheet" href="fcfs.css" />
+<link rel="stylesheet" href="LRU.css" />
 </head>
 <body>
 <div class="header">
