--- a/pagereplacementAlgo/FIFO/FIFO.html
+++ b/pagereplacementAlgo/FIFO/FIFO.html
@@ -91,6 +91,33 @@ Step-2 Introduction
 Step-3 Introduction
 </li>
 </ul>
+  <div id="Simulation">
+            <div id="algo">
+                <div class="container">
+                    <br>
+                    <div>
+                        <strong style="color: rgb(7, 7, 7);">Reference String:</strong>
+                        <input class="input" type="text" placeholder="Ex: 2 4 5 6 2 6" id="input">
+                    </div>
+                    <div>
+                        <strong style="color: rgb(12, 12, 12);">Frames:</strong>
+                        <input class="input" type="number" id="frames" placeholder="Ex: 2 " style="width: 30%;" min=1>
+                    </div>
+                    <br>
+                    <div>
+                        <button class="input" id="submit">Show Output</button>
+                        <button class="btn1" class="input" id="submit" onClick=reset()>Reset</button>
+                    </div>
+                    <div>
+                        <table id="table" class="container text-center">
+                        </table>
+                        <div id="summary" class="d-flex justify-content-around font-weight-bold text-uppercase">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <script src="./Fifo_Simulation.js" > </script>
 </div>
 </div>
 </div>
