--- a/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
+++ b/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
@@ -91,11 +91,37 @@ Step-2 Introduction
 Step-3 Introduction
 </li>
 </ul>
-</div>
-</div>
-</div>
-</div>
+        				       <div id="algo">
+                                            <div class="container">
+                                                <div>
+                                                    <strong>Reference String:</strong>
+                                                    <input class="input" placeholder="Ex: 2 4 5 6 2 6" type="text"
+                                                        id="input">
+                                                </div>
+                                                <br>
+                                                <div>
+                                                    <strong>Frames:</strong>
+                                                    <input class="input" placeholder="Ex: 2 " type="number" id="frames"
+                                                        style="width: 20%;" min=1 max=10>
+                                                </div>
+                                                <br>
+                                                <button class="input" class="btn1" id="submit">Show Output</button>
+                                                <button class="btn1" class="input" id="submit"
+                                                    onClick=reset()>Reset</button>
+                                                <div>
+                                                    <table width="100%" id="table" class="container text-center">
+                                                    </table>
 
-
+                                                    <div id="summary"
+                                                        class="d-flex justify-content-around font-weight-bold text-uppercase">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+</div>
+</div>
+</div>
+</div>
+  <script src="./OPTIMAL.js"></script>
 </body>
 </html>
