--- a/pagereplacementAlgo/LRU/LRU.html
+++ b/pagereplacementAlgo/LRU/LRU.html
@@ -93,11 +93,35 @@ Step-2 Introduction
 Step-3 Introduction
 </li>
 </ul>
+ 					<div id="Simulation">
+                                            <div id="algo">
+                                                <div class="container">
+                                                    <div>
+                                                        <strong>Reference String:</strong>
+                                                        <input class="input" type="text" placeholder="Ex: 2 4 5 6 2 6" id="input">
+                                                    </div>
+                                                    <br>                                            
+                                                    
+                                                    <div>
+                                                        <strong>Frames:</strong> <input class="input" type="number" id="frames" placeholder="Ex: 2 " style="width: 20%;" min=1>
+                                                    </div>
+                                                    <br>
+                                                    <div>
+                                                        <button class="input" id="submit">Show Output</button>
+                                                        <button class="btn1" class="input" id="submit" onClick=reset()>Reset</button>
+                                                    </div>
+                                                    <div>
+                                                        <table id="table" class="container text-center">
+                                                        </table>
+                                                        <div id="summary" class="d-flex justify-content-around font-weight-bold text-uppercase"> </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
 </div>
 </div>
 </div>
 </div>
-
-
+ <script src="./FIFO.js"></script>
 </body>
 </html>
