--- a/pagereplacementAlgo/LRU/LRU.html
+++ b/pagereplacementAlgo/LRU/LRU.html
@@ -122,6 +122,6 @@ Step-3 Introduction
 </div>
 </div>
 </div>
- <script src="./FIFO.js"></script>
+ <script src="./LRU.js"></script>
 </body>
 </html>
