--- a/pagereplacementAlgo/LRU/LRU.html
+++ b/pagereplacementAlgo/LRU/LRU.html
@@ -93,7 +93,7 @@ Step-2 Introduction
 Step-3 Introduction
 </li>
 </ul>
- 					<div id="Simulation">
+					                           <div id="Simulation">
                                             <div id="algo">
                                                 <div class="container">
                                                     <div>
@@ -122,6 +122,6 @@ Step-3 Introduction
 </div>
 </div>
 </div>
- <script src="./LRU.js"></script>
+ <script src=""./LRU.js"></script>
 </body>
 </html>
