--- a/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
+++ b/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
@@ -107,7 +107,7 @@ Step-3 Introduction
                                                 <div>
                                                     <strong>Frames:</strong>
                                                     <input class="input" placeholder="Ex: 2 " type="number" id="frames"
-                                                        style="width: 30%;" min=1 max=10>
+                                                        style="width: 30%;" min=1>
                                                 </div>
                                                 <br>
                                                 <button class="input" class="btn1" id="submit">Show Output</button>
