--- a/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
+++ b/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
@@ -110,7 +110,7 @@ Step-3 Introduction
                                                         style="width: 60%;" min=1>
                                                 </div>
                                                 <br>
-                                                <button class="input" class="btn1" id="submit">Show Output</button>
+                                                <button class="input" class="btn1" id="submit" style="height: 30%;">Show Output</button>
                                                 <button class="btn1" class="input" id="submit"
                                                     onClick=reset()>Reset</button>
                                                 <div>
