--- a/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
+++ b/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
@@ -111,7 +111,7 @@ Step-3 Introduction
                                                 </div>
                                                 <br>
                                                 <button class="input" class="btn1" id="submit" style="height: 30%;">Show Output</button>
-                                                <button class="btn1" class="input" id="submit"
+                                                <button class="btn1" class="input" id="submit" style="height: 30%;"
                                                     onClick=reset()>Reset</button>
                                                 <div>
                                                     <table width="100%" id="table" class="container text-center">
