--- a/pagereplacementAlgo/FIFO/FIFO.html
+++ b/pagereplacementAlgo/FIFO/FIFO.html
@@ -160,5 +160,6 @@ Step-3 Introduction
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
   <script src="./FIFO.js"></script>
+  <script src= "FIFO_Graph.js"></script>
 </body>
 </html>
