--- a/pagereplacementAlgo/LRU/LRU.html
+++ b/pagereplacementAlgo/LRU/LRU.html
@@ -157,5 +157,6 @@ Step-3 Introduction
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
  <script src=""./LRU.js"></script>
+ <script src="LRU_Graph.js"></script>
 </body>
 </html>
