--- a/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
+++ b/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
@@ -123,6 +123,38 @@ Step-3 Introduction
                                                 </div>
                                             </div>
                                         </div>
+   <canvas id="canvas">  </canvas>
+    <div id="se" class="container">
+        <div>
+            <h2>
+                Graph OF Optimal Page Replacement :-
+            </h2>
+        </div>
+        <div>
+            <form action="action.php" method="GET">
+                <div id="q1">
+                    <label class="lab" for="nFrames">Number Of Frames : </label>
+                    <input type="number" id="nFrames" name="frames" class="input-1">
+                </div>
+                <div id="q2">
+                    <label class="lab" for="inputs" class="label-1">Order of pages :</label>
+
+                    <input type="text" id="inputs" name="in" class="input-1">
+                </div>
+            </form>
+            <div class="button col-md-6">
+                <button id="btn" onclick="Graph()"> Show Graph</button>
+                <button class="btn1" class="input" id="submit" onClick=reset()>Reset</button>
+            </div>
+            <div class="backco">
+                <div class="loading-screen" id="loading-screen" style="display: none;"></div>
+                <div class="myDiv" id='myDiv'></div>
+                <canvas id="myChart" style="display: none;" width="900" height="300"></canvas>
+            </div>
+        </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
   <script src="./OPTIMAL.js"></script>
+  <script src="OPTIMAL_Graph.js"></script>          
 </body>
 </html>
