--- a/pagereplacementAlgo/LRU/LRU.html
+++ b/pagereplacementAlgo/LRU/LRU.html
@@ -82,15 +82,38 @@ LRU second Paragraph
 <ul>
 <label>STEP 1 :</label>
 <li>
-Step-1 Introduction
+Start the process
 </li>
 <label>STEP 2 :</label>
 <li>
-Step-2 Introduction
-</li>
+Declare the page size</li>
 <label>STEP 3 :</label>
 <li>
-Step-3 Introduction
+ Determine the number of pages to be inserted.
+</li>
+<label>STEP 4 :</label>
+<li>
+ Get the value.
+</li>
+<label>STEP 5 :</label>
+<li>
+Declare the counter and stack value.
+</li>
+<label>STEP 6 :</label>
+<li>
+ Choose the least recently used page by the counter value.
+</li>
+<label>STEP 7 :</label>
+<li>
+  Stack them as per the selection.
+</li>
+<label>STEP 8 :</label>
+<li>
+ Display the values.
+</li>
+<label>STEP 9 :</label>
+<li>
+Terminate the process.
 </li>
 </ul>
 </div>
