--- a/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
+++ b/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
@@ -80,16 +80,22 @@ OPTIMAL second Paragraph
 <ul>
 <label>STEP 1 :</label>
 <li>
-Step-1 Introduction
-</li>
+Push the first page in the stack as per the memory demand.</li>
 <label>STEP 2 :</label>
 <li>
-Step-2 Introduction
-</li>
+Push the second page as per the memory demand.</li>
 <label>STEP 3 :</label>
 <li>
-Step-3 Introduction
-</li>
+Push the third page until the memory is full.</li>
+       <label>STEP 4 :</label>
+<li>
+As the queue is full, the page which is least recently used is popped.</li>
+ <label>STEP 5 :</label>
+<li>
+Repeat step 4 until the page demand continues and until the processing is over.</li>
+ <label>STEP 6 :</label>
+<li>
+Terminate the program.</li>
 </ul>
         				
 </div>
