--- a/pagereplacementAlgo/FIFO/FIFO.html
+++ b/pagereplacementAlgo/FIFO/FIFO.html
@@ -72,8 +72,12 @@ Recent Used
 <div>Basic Theory :</div>
 <div></div>
 <div>
-FIFO  This is the simplest page replacement algorithm. In this algorithm, operating system keeps track of all pages in the memory in a queue, oldest page is in the front of the queue. When a page needs to be replaced page in the front of the queue is selected for removal.<br /><br/>
-FIFO Second Para
+It is a very simple way of Page replacement and is referred to as First in First Out. This algorithm mainly replaces the oldest page that has been present in the main memory for the longest time.
+
+This algorithm is implemented by keeping the track of all the pages in the queue.
+As new pages are requested and are swapped in, they are added to the tail of a queue and the page which is at the head becomes the victim.
+
+This is not an effective way of page replacement but it can be used for small systems.
 </div>
 </div>
 <div class="theory-step">
