--- a/pagereplacementAlgo/LRU/LRU.html
+++ b/pagereplacementAlgo/LRU/LRU.html
@@ -72,8 +72,13 @@ Recent Used
 <div>Basic Theory :</div>
 <div></div>
 <div>
-Least Recently Used (LRU) page replacement algorithm works on the concept that the pages that are heavily used in previous instructions are likely to be used heavily in next instructions. And the page that are used very less are likely to be used less in future. Whenever a page fault occurs, the page that is least recently used is removed from the memory frames. Page fault occurs when a referenced page in not found in the memory frames.
+This algorithm stands for "Least recent used" and this algorithm helps the Operating system to search those pages that are used over a short duration of time frame.
 
+The page that has not been used for the longest time in the main memory will be selected for replacement.
+
+This algorithm is easy to implement.
+
+This algorithm makes use of the counter along with the even-page.
  <br />
 LRU second Paragraph
 </div>
