--- a/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
+++ b/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
@@ -72,8 +72,13 @@ Recent Used
 <div>Basic Theory :</div>
 <div></div>
 <div>
-OPTIMAL In this algorithm, pages are replaced which would not be used for the longest duration of time in the future. <br />
-OPTIMAL second Paragraph
+This algorithm mainly replaces the page that will not be used for the longest time in the future. The practical implementation of this algorithm is not possible.
+
+Practical implementation is not possible because we cannot predict in advance those pages that will not be used for the longest time in the future.
+
+This algorithm leads to less number of page faults and thus is the best-known algorithm
+
+Also, this algorithm can be used to measure the performance of other algorithms.
 </div>
 </div>
 <div class="theory-step">
