--- a/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
+++ b/pagereplacementAlgo/OPTIMAL/OPTIMAL.html
@@ -72,7 +72,7 @@ Recent Used
 <div>Basic Theory :</div>
 <div></div>
 <div>
-This algorithm mainly replaces the page that will not be used for the longest time in the future. The practical implementation of this algorithm is not possible.
+Optimal algorithm mainly replaces the page that will not be used for the longest time in the future. The practical implementation of this algorithm is not possible.
 
 Practical implementation is not possible because we cannot predict in advance those pages that will not be used for the longest time in the future.
 
