--- a/pagereplacementAlgo/PRA_HOMEPAGE.html
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.html
@@ -72,6 +72,14 @@
                   </div>
                 </div>
               </a>
+                             <a href="COMPARISON/comparisom.html">
+                <div class="belady">
+                  <div class="short-title">LRU</div>
+                  <div class="long-title">
+                    Least recent <br/> used
+                  </div>
+                </div>
+              </a>
             </div>
             <div>
             </div>
