--- a/pagereplacementAlgo/PRA_HOMEPAGE.html
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.html
@@ -74,7 +74,7 @@
               </a>
                              <a href="COMPARISON/comparisom.html">
                 <div class="belady">
-                  <div class="short-title">LRU</div>
+                  <div class="short-title">COMPARISON</div>
                   <div class="long-title">
                     Least recent <br/> used
                   </div>
