--- a/pagereplacementAlgo/PRA_HOMEPAGE.html
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.html
@@ -72,7 +72,7 @@
                   </div>
                 </div>
               </a>
-                             <a href="COMPARISON/comparisom.html">
+                             <a href="COMPARISON/comparison.html">
                 <div class="belady">
                   <div class="short-title">COMPARISON</div>
                   <div class="long-title">
