--- a/pagereplacementAlgo/COMPARISON/comparison.html
+++ b/pagereplacementAlgo/COMPARISON/comparison.html
@@ -39,7 +39,7 @@
         </div>
 
     </div>
-    <script src="Compersion.js"></script>
+    <script src="function Graph() {.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
    
     <script>
