--- a/pagereplacementAlgo/COMPARISON/comparison.html
+++ b/pagereplacementAlgo/COMPARISON/comparison.html
@@ -12,7 +12,7 @@
     <div id="se" class="container">
         <div>
             <h2>
-                Graph(FIFO,LIFO,MRU,LRU,Random,OPR) :-
+                Graph(FIFO,LRU,OPTIMAL) :-
             </h2>
         </div>
         <div>
