--- a/pagereplacementAlgo/PRA_HOMEPAGE.html
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.html
@@ -72,6 +72,32 @@
                   </div>
                 </div>
               </a>
+                             <a href="MRU/mru.html">
+                <div class="belady">
+                  <div class="short-title">MRU</div>
+                  <div class="long-title">
+                    Most recent <br/> used
+                  </div>
+                </div>
+              </a>
+              <a href="RANDOM/radnom.html">
+                <div class="belady">
+                  <div class="short-title">RANDOM</div>
+                  <div class="long-title">
+                    Random Algo
+                  </div>
+                </div>
+              </a>
+              </a>
+                         <a href="LIFO/lifo.html">
+                <div class="belady">
+                  <div class="short-title">LIFO</div>
+                  <div class="long-title">
+                    Last in <br/> first out
+                  </div>
+                </div>
+              </a>
+                             
                              <a href="COMPARISON/comparison.html">
                 <div class="belady">
                   <div class="short-title">COMPARISON</div>
