--- a/pagereplacementAlgo/PRA_HOMEPAGE.html
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.html
@@ -80,7 +80,7 @@
                   </div>
                 </div>
               </a>
-              <a href="RANDOM/radnom.html">
+              <a href="RANDOM/random.html">
                 <div class="belady">
                   <div class="short-title">RANDOM</div>
                   <div class="long-title">
