--- a/pagereplacementAlgo/LIFO/lifo.html
+++ b/pagereplacementAlgo/LIFO/lifo.html
@@ -81,6 +81,7 @@ It is implemented by keeping track of all the pages in a stack.
 <ul>
 <label>STEP 1 :</label>
 <li>
+Consider page reference string 7, 0, 1, 3, 5, 6 , 7, 12 with 3 page frames.Find number of page faults.
 Initially all slots are empty, so when 7, 0, 1 came they are allocated to the empty.slots —> 3 Page Faults.
 </li>
 <label>STEP 2 :</label>
