--- a/pagereplacementAlgo/LIFO/lifo.html
+++ b/pagereplacementAlgo/LIFO/lifo.html
@@ -105,7 +105,11 @@ Then 5 comes, it is not available in memory so it replaces the newest page slot 
 Then 12 comes, it is not available in memory so it replaces the newest page slot i.e 5 ==> 12 .1 Page Fault. </li>
 
 </ul>
-
+ </div>
+ </div>
+ </div>
+ </div>
+ </div>
 
 
 
