--- a/pagereplacementAlgo/LIFO/lifo.html
+++ b/pagereplacementAlgo/LIFO/lifo.html
@@ -110,8 +110,10 @@ Then 12 comes, it is not available in memory so it replaces the newest page slot
  </div>
  </div>
  </div>
-
-
+ </div>
+ </div>
+ </div>
+ </div>
 
 
 
