--- a/pagereplacementAlgo/LIFO/lifo.html
+++ b/pagereplacementAlgo/LIFO/lifo.html
@@ -169,16 +169,14 @@ Increment the page faults. </li>
                 <canvas id="myChart" style="display: none;" width="900" height="300"></canvas>
             </div>
         </div>
-        <div class="lb" id="gave_ma">
-            <a class="btn" id="fs" href="./FIFO_Simulation.html"> Simulation</a>
-            <a class="btn" href="./FIFO.html">Explaination</a>
-        </div>
+
+  
     </div>
   
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
-  <script src="./FIFO.js"></script>
-  <script src= "FIFO_Graph.js"></script>
+  <script src="./lifo.js"></script>
+  <script src= "LifoGraph.js"></script>
 </body>
 </html>
 
