--- a/pagereplacementAlgo/LIFO/lifo.html
+++ b/pagereplacementAlgo/LIFO/lifo.html
@@ -65,49 +65,45 @@ Recent Used
 <div class="content">
 <div class="theory">
 <div class="theory-heading">
-<div>FIRST IN FIRST OUT</div>
-<div>F.I.F.O.</div>
+<div>LAST IN FIRST OUT</div>
+<div>L.I.F.O.</div>
 </div>
 <div class="theory-text">
 <div>Basic Theory :</div>
 <div></div>
 <div>
-It is a very simple way of Page replacement and is referred to as First in First Out. This algorithm mainly replaces the oldest page that has been present in the main memory for the longest time.
+LIFO works on the principle of “Last in First out“.It replaces the newest page that arrived at last in the main memory.
+It is implemented by keeping track of all the pages in a stack.
 
-This algorithm is implemented by keeping the track of all the pages in the queue.
-As new pages are requested and are swapped in, they are added to the tail of a queue and the page which is at the head becomes the victim.
-
-This is not an effective way of page replacement but it can be used for small systems.
 </div>
 </div>
 <div class="theory-step">
 <ul>
 <label>STEP 1 :</label>
 <li>
-Start to traverse the pages.
+Consider page reference string 7, 0, 1, 3, 5, 6 , 7, 12 with 3 page frames.Find number of page faults.
+Initially all slots are empty, so when 7, 0, 1 came they are allocated to the empty.slots —> 3 Page Faults.
 </li>
 <label>STEP 2 :</label>
 <li>
-If the memory holds fewer pages then the capacity go to Step 3, else go to Step 5.
+when 3 comes, it is not available in memory so it replaces the newest page slot i.e 1 ==> 3 —> 1 Page Faults.
 </li>
 <label>STEP 3 :</label>
 <li>
-Push pages in the queue one at a time until the queue reaches its maximum capacity or all page requests are fulfilled.
+Then 5 comes, it is not available in memory so it replaces the newest page slot i.e 3 ==> 5 .1 Page Fault.
 </li>
 <label>STEP 4 :</label>
 <li>
-If the current page is present in the memory, do nothing.
+6 comes, it is also not available in memory so it replaces the newest page slot i.e 5 ==>.1 Page Fault.
 </li>
 <label>STEP 5 :</label>
 <li>
-Else, pop the topmost page from the queue as it was inserted first.
+7 comes, it is available in memory so not increase page fault .0 Page Fault.
  </li>
  <label>STEP 6 :</label>
 <li>
-Replace the topmost page with the current page from the string. </li>
- <label>STEP 7 :</label>
-<li>
-Increment the page faults. </li>
+Then 12 comes, it is not available in memory so it replaces the newest page slot i.e 5 ==> 12 .1 Page Fault. </li>
+
 </ul>
   
 </div>
