--- a/pagereplacementAlgo/LIFO/lifo.html
+++ b/pagereplacementAlgo/LIFO/lifo.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>FIFO</title>
+<title>LIFO</title>
 
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link
@@ -105,11 +105,7 @@ Then 5 comes, it is not available in memory so it replaces the newest page slot 
 Then 12 comes, it is not available in memory so it replaces the newest page slot i.e 5 ==> 12 .1 Page Fault. </li>
 
 </ul>
-  
-</div>
-</div>
-</div>
-</div>
+
    <div class="tm-timeline-description-wrap">
                             <div class="tm-bg-dark tm-timeline-description">
                                 <h3 class="tm-text-yellow tm-font-400">
