--- a/pagereplacementAlgo/RANDOM/random.html
+++ b/pagereplacementAlgo/RANDOM/random.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>FIFO</title>
+<title>RANDOM</title>
 
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link
@@ -81,16 +81,11 @@ Usually it fares better than FIFO, and for looping memory references it is bette
 <li>As the name suggests, this algorithm randomly replaces any page.
  So, this algorithm may behave like any other algorithm like FIFO, LIFO, LRU, Optimal etc.</li>
 </ul>
-
-
-
-
-        <div class="tm-timeline-item">
-          <div class="tm-timeline-item-inner">
-            <img src="assets/website_pages/implementation.png" alt="Image" class="rounded-circle tm-img-timeline" />
-            <div class="tm-timeline-connector">
-              <p class="mb-0">&nbsp;</p>
-            </div>
+  
+</div>
+</div>
+</div>
+</div>
             <div class="tm-timeline-description-wrap">
               <div class="tm-bg-dark tm-timeline-description">
                 <h3 class="tm-text-yellow tm-font-400">
@@ -171,8 +166,11 @@ Usually it fares better than FIFO, and for looping memory references it is bette
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="RandomGraph.js"></script>
-    <script src="random.js"> </script>
-</body>
+   
 
+  <script src="./random.js"></script>
+  <script src= "RandomGraph.js"></script>
+</body>
 </html>
+
+
