--- a/pagereplacementAlgo/MRU/mru.html
+++ b/pagereplacementAlgo/MRU/mru.html
@@ -204,12 +204,12 @@ Total page fault :- 8 Total page fault Ratio :- 0.66 Total page Hit :- 4 Total p
 
 
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   
   
 
-  <script src="./mru.js"></script>
+  <script src="./lru.js"></script>
   <script src= "MruGraph.js"></script>
 </body>
 </html>
