--- a/pagereplacementAlgo/MRU/mru.html
+++ b/pagereplacementAlgo/MRU/mru.html
@@ -209,7 +209,7 @@ Total page fault :- 8 Total page fault Ratio :- 0.66 Total page Hit :- 4 Total p
   
   
 
-  <script src="./lru.js"></script>
+  <script src="./mru.js"></script>
   <script src= "MruGraph.js"></script>
 </body>
 </html>
