--- a/pagereplacementAlgo/MRU/mru.html
+++ b/pagereplacementAlgo/MRU/mru.html
@@ -113,7 +113,69 @@ Total page fault :- 8 Total page fault Ratio :- 0.66 Total page Hit :- 4 Total p
 </div>
 </div>
 </div>
-    <div class="tm-timeline-description-wrap">
+  <div class="tm-timeline-item">
+                    <div class="tm-timeline-item-inner">
+                        <img src="assets/website_pages/flow.png" alt="Image" class="rounded-circle tm-img-timeline" />
+                        <div class="tm-timeline-connector">
+                            <p class="mb-0">&nbsp;</p>
+                        </div>
+                        <div class="tm-timeline-description-wrap">
+                            <div class="tm-bg-dark-light tm-timeline-description">
+                                <h3 class="tm-text-cyan tm-font-400">
+                                    MRU Example:
+                                </h3>
+                                <img src="./images/Page-Replacement-Algorithms-Important-Results-Result-01.png" alt=""
+                                    style="width: 600px; background-color: rgb(199, 228, 228);">
+                                <p>
+                                <p>
+                                    Consider page reference string 1, 2, 3, 4, 5, 6, 1 , 2, 3, 4, 5, 6 with 4 page frames.Find number of page faults.
+                                </p>
+                                <ol>
+                                    <li>
+                                        Initially all slots are empty, so when 1,2,3,4 came they are allocated to the empty
+                                        slots —> 4 Page Faults.
+                                    </li>
+                                    <li>
+                                        when 5 comes, it is not available in memory so it replaces the newest page slot i.e 4 ==> 5 —> 1 Page Faults.
+                                    </li>
+                                    <li>
+                                        Then 6 comes, it is not available in memory so it replaces the newest page slot i.e 5 ==> 6 .1 Page Fault.
+                                    </li>
+                                    <li>
+                                        1 comes, it is available in memory so not increase page fault .0 Page Fault.
+                                        2 comes, it is available in memory so not increase page fault .0 Page Fault.
+                                        3 comes, it is available in memory so not increase page fault .0 Page Fault.
+                                    </li>
+                                    <li>
+                                        Then 4 comes, it is not available in memory so it replaces the newest page slot i.e 3 ==> 4 .1 Page Fault.
+Then 5 comes, it is not available in memory so it replaces the newest page slot i.e 4 ==> 5 .1 Page Fault.
+                                    </li>
+                                    <li>
+                                        6 comes, it is available in memory so not increase page fault .0 Page Fault.
+                                    </li>
+                                    <li>
+                                        Total page fault :- 8
+Total page fault Ratio :- 0.66
+Total page Hit :- 4
+Total page Hit Ratio :- 0.33
+                                    </li>
+                                </ol>
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tm-timeline-connector-vertical"></div>
+                </div>
+
+                <div class="tm-timeline-item">
+                    <div class="tm-timeline-item-inner">
+                        <img src="assets/website_pages/implementation.png" alt="Image"
+                            class="rounded-circle tm-img-timeline" />
+                        <div class="tm-timeline-connector">
+                            <p class="mb-0">&nbsp;</p>
+                        </div>
+                        <div class="tm-timeline-description-wrap">
                             <div class="tm-bg-dark tm-timeline-description">
                                 <h3 class="tm-text-yellow tm-font-400">
                                     Implementation of the algorithm:
@@ -203,14 +265,10 @@ Total page fault :- 8 Total page fault Ratio :- 0.66 Total page Hit :- 4 Total p
     </div>
 
 
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+    <script src="mru.js"></script>
+    <script src="MruGraph.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  
-  
 
-  <script src="./mru.js"></script>
-  <script src= "MruGraph.js"></script>
 </body>
 </html>
 
