--- a/pagereplacementAlgo/COMPARISON/comparison.html
+++ b/pagereplacementAlgo/COMPARISON/comparison.html
@@ -12,7 +12,7 @@
     <div id="se" class="container">
         <div>
             <h2>
-                Graph(FIFO,LRU,OPTIMAL) :-
+                Graph(FIFO,LIFO,MRU,LRU,Random,OPR) :-
             </h2>
         </div>
         <div>
@@ -39,7 +39,7 @@
         </div>
 
     </div>
-    <script src="function Graph() {.js"></script>
+    <script src="Compersion.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
    
     <script>
