--- a/pagereplacementAlgo/LIFO/lifo.html
+++ b/pagereplacementAlgo/LIFO/lifo.html
@@ -105,7 +105,12 @@ Then 5 comes, it is not available in memory so it replaces the newest page slot 
 Then 12 comes, it is not available in memory so it replaces the newest page slot i.e 5 ==> 12 .1 Page Fault. </li>
 
 </ul>
-
+ </div>
+</div>
+ </div>
+ </div>
+ </div>
+ </div>
    <div class="tm-timeline-description-wrap">
                             <div class="tm-bg-dark tm-timeline-description">
                                 <h3 class="tm-text-yellow tm-font-400">
@@ -165,7 +170,7 @@ Then 12 comes, it is not available in memory so it replaces the newest page slot
                     <div id="se" class="container">
                         <div>
                             <h3 style="color: #99cc66;" >
-                                Graph OF Optimal Page Replacement :-
+                                Graph OF Last in first out Replacement :-
                             </h3>
                         </div>
                         <div>
